fix jumping zoom

--- a/src/blocks/button/_for/button_for_how-to-find.css
+++ b/src/blocks/button/_for/button_for_how-to-find.css
@@ -5,6 +5,7 @@
 	width: 64px;
 	height: 64px;
 	padding: 22.5px;
+	background-color: #252525;
 	background-image: url('../../../images/how-to-find__place-zoom.svg');
 	background-repeat: no-repeat;
 	background-position: center;
